--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,14 @@ on:
       - main      # auto deploys → prod
       - develop   # auto deploys → dev
 
+permissions:
+  id-token: write   # Required for OIDC
+  contents: read    # Required for checkout
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -37,6 +42,16 @@ jobs:
           else
             echo "target=uat" >> $GITHUB_OUTPUT
           fi
+
+      - name: Azure Login (OIDC)
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Install Databricks CLI
+        run: pip install databricks-cli
 
       - name: Deploy Bundle using Global Template
         uses: Himaan1502/databricks-ci-cd-templates/.github/actions/deploy@main
